<resources>
    <string name="app_name">ArandukApp</string>
    <string name="search_hint">Buscar</string>
    <string name="titulo_1">Titulo</string>
    <string name="link_spl">www.spl.gov.py</string>
    <string name="telefono_spl">Tel.: (021)607 111</string>
    <string name="direccion_spl">Avda Boggiani 6260 e/R.I.5 Gral.Díaz y</string>
    <string name="nombre_spl">Secretaría de Políticas Lingüísticas (SPL)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="direccion_spl_2">R.I.4 Curupayty</string>
    <string name="siguiente">Ehasa</string>
    <string name="volver">Ejevy</string>
    <string name="finalizar"> </string>
    <string name="nombre_fpuna">Facultad Politécnica (UNA)</string>
    <string name="direccion_fpuna">Facultad Politécnica</string>
    <string name="direccion_fpuna_2">Campus, San Lorenzo - Paraguay</string>
    <string name="telefono_fpuna">Tel.: (021)588 7000 - CC 2111</string>
    <string name="link_fpuna">www.pol.una.py</string>
    <string name="nombre_ggg">Grupo de Grabaciones en Guaraní</string>
    <string name="direccion_ggg">De las Palmeras 4331</string>
    <string name="telefono_ggg">Tel.: (0981) 317755</string>
    <string name="link_ggg">ggg.audiobibliadata.com</string>
    <string name="buscar">Eheka...</string>

</resources>
